fixed game area spacing to contain everything

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,14 +9,13 @@ body {
       background-color: #E6ECF0;
       box-sizing: border-box;
       width: 100%;
-      height: 65vh;
-      max-height: 450px;
+      height: 70vh;
+      max-height: 650px;
       max-width: 1000px;
       margin-left: auto;
       margin-right: auto;
       margin-top: 10%;
       padding: 2%;
-    
   }
   
   .btn {
